<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@drawable/gradientbg"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextbg"
                android:hint="@string/search_any_image_here"
                android:maxLines="1"
                android:minLines="1"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="-50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:tint="@color/white"
                android:importantForAccessibility="no" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/searchLayout"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="serif"
            android:text="@string/categories"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/searchLayout"
            android:layout_marginTop="43dp"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/trending"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#7371fc"
                            app:cardCornerRadius="10dp">


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/trendings"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="30dp"
                                android:src="@drawable/trending"
                                android:contentDescription="@string/todo" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/technology"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#52796f"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/technology"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/technology"
                                android:contentDescription="@string/todo" />

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/car"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#d4573e"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/cars"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="30dp"
                                android:src="@drawable/car"
                                android:contentDescription="@string/todo" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/nature"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#2b9348"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/nature"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/tree"
                                app:tint="#04e762" />

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/flower"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#b96492"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/flowers"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="30dp"
                                android:src="@drawable/flowers" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/dark"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#30343f"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/dark"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/dark"
                                app:tint="@color/black" />

                        </androidx.cardview.widget.CardView>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/bike"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#d90429"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/bikes"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="30dp"
                                android:src="@drawable/bycicle" />

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/god"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="5dp"
                            android:backgroundTint="#1f7a8c"
                            app:cardCornerRadius="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:text="@string/gods"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="23dp"
                                android:layout_height="25dp"
                                android:layout_gravity="end|center"
                                android:layout_marginEnd="20dp"
                                android:src="@drawable/god"
                                app:tint="@color/white" />


                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bottomLayout"
            android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

        </LinearLayout>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>